# object-discovery-pytorch

./: .gitignore  README.md  download_clevr.sh  predict.py  pyproject.toml  run.sh
data_scripts/: clevr_with_masks.py  download_clevrtex.sh  preprocess_clevr_with_masks.py  preprocess_tetrominoes.py  tetrominoes.py
object_discovery/: data.py  method.py  params.py  slate_model.py  slot_attention_model.py  train.py  transformer.py  utils.py
object_discovery/gnm/: config.py  gnm_model.py  logging.py  metrics.py  module.py  utils.py
slot_attention/: data.py  method.py  model.py  params.py  segmentation_metrics.py  slate_model.py  slot_attention_model.py  train.py  transformer.py  utils.py
slot_attention/gnm/: gnm_model.py  logging.py  module.py  submodule.py  utils.py
